Revision history for MooseX-Extended

{{$NEXT}}
          - If you have Perl v5.35.8 or above, including `try` will use Perl's
            native `try` and not `Syntax::Keyword::Try`.
            https://github.com/Ovid/moosex-extended/issues/55
          - Internal changes to make tests a touch easier to write and to make
            test output a bit clearer when optional modules are not loaded.

0.32      2022-09-24 17:06:38 CEST

          - Allow inherited attributes (has '+x' ...). Thanks to gmbow for
            spotting this bug.
          - :Standard :String and :Numeric tags are now available for types
          - Make sure all Type::Params utility functions are available
          - Single arguments to includes, excludes, or types may be simple
            strings and no longer require an array reference.

0.31      2022-09-16 18:19:09 CEST
          - Lock down our version of Future.pm to avoid buggy 0.48_001.

0.30      2022-09-15 09:54:00 CEST

          - Add support for a `method` keyword via Function::Parameters.
          - Move "includes" docs to its own POD doc.

0.29      2022-08-23 09:05:52 CEST

          - Bump minimum version of B::Hooks::AtRuntime to avoid a sporadic
            segfault.

0.28      2022-08-08 09:30:37 CEST

          - No functional change. Bump Test::Compile version to avoid
            CPAN test failures

0.27      2022-08-07 09:42:24 CEST

          - Optional Syntax::Keyword::Try support
          - Rename repo from moosex-extreme to moosex-extended
          - Add a compilation test to try to expose an intermittent
            but with Test::Compile. So far, we cannot reproduce

0.26      2022-07-29 08:28:21 CEST

          - "naked" fields (those no writer, default, or builder) that cannot
            have a value set will now issue a warning. (thanks, tobyink)
          - `is => 'rwp'` is now supported
          - Use new version of B::Hooks::AtRuntime. Classes now remain