@@ -1,6 +1,8 @@
 Revision history for MooseX-Extended
 
 {{$NEXT}}
+          - You can now specify custom imports for each included feature. See
+            MooseX::Extended::Manual::Includes for more information.
           - If you have Perl v5.35.8 or above, including `try` will use Perl's
             native `try` and not `Syntax::Keyword::Try`.
             https://github.com/Ovid/moosex-extended/issues/55
